--- a/atracions.html
+++ b/atracions.html
@@ -19,9 +19,9 @@
         <div>
           <!-- strona główna- manual- atrakcje -->
           <ul>
-            <li><button class="button">strona główna</button></li>
+            <li><a class="button" href="./index.html">strona główna</a></li>
             <li><a class="button" href="./manual.html">manual</a></li>
-            <li><button class="button">atrakcje</button></li>
+            <li><a class="button" href="./atracions.html">atrakcje</a></li>
           </ul>
         </div>
       </div>
