--- a/manual.html
+++ b/manual.html
@@ -344,18 +344,20 @@
             albo wywołać impuls krótkim kliknięciem
           </li>
           <li>
-            Jak było wspomniane w dziale Klimatyzacji, niektóre okna (sypialnie i salon) otwierają
-            się lub przymykają same o określonych godzinach.
+            Jak było wspomniane w dziale Klimatyzacji, niektóre okna (sypialnie
+            i salon) otwierają się lub przymykają same o określonych godzinach.
           </li>
           <li>
-            Przymykanie następuje za dnia celem zmniejszenia nagrzewania, oraz przed snem.
+            Przymykanie następuje za dnia celem zmniejszenia nagrzewania, oraz
+            przed snem.
           </li>
           <li>
-            Otwieranie następuje rano o określonej godzinie (na chwilę obecną 7 rano) oraz w ciągu
-            dnia gdy słońce przestanie nagrzewać pokój.
+            Otwieranie następuje rano o określonej godzinie (na chwilę obecną 7
+            rano) oraz w ciągu dnia gdy słońce przestanie nagrzewać pokój.
           </li>
           <li>
-            Aby przestawić godzinę porannego otwierania i uniknąć nieoczekiwanego budzenia, prośba o kontakt.
+            Aby przestawić godzinę porannego otwierania i uniknąć
+            nieoczekiwanego budzenia, prośba o kontakt.
           </li>
         </ol>
       </div>
@@ -571,6 +573,7 @@
       </div>
 
       <div class="separator"></div>
+
       <div>
         <div class="section">
           <h2>Kuchnia</h2>
@@ -644,6 +647,7 @@
       </div>
 
       <div class="separator"></div>
+
       <div>
         <div class="section">
           <h2>Grill</h2>
@@ -651,12 +655,6 @@
             <li>
               Do dyspozycji jest kilka opcji: grill gazowy Weber duży, piec na
               pizze, grill standardowy (my nie używamy) obok pieca na pizze
-            </li>
-            <li>
-              jeśli będziecie używać to zapewne opcję pierwszą (można ją
-              wzbogacić o kilka opcji typu patelnia, garnek caserole, przystawka
-              do gofrów, opiekacz do kurczaka - opcje można znaleźć w najniższej
-              szufladzie na wprost od wejścia do Gospodarczego)
             </li>
             <div
               id="photo-pv"
@@ -666,6 +664,13 @@
               <figcaption>Zawór od gazu</figcaption>
             </div>
             <li>
+              jeśli będziecie używać to zapewne opcję pierwszą (można ją
+              wzbogacić o kilka opcji typu patelnia, garnek caserole, przystawka
+              do gofrów, opiekacz do kurczaka - opcje można znaleźć w najniższej
+              szufladzie na wprost od wejścia do Gospodarczego)
+            </li>
+
+            <li>
               przed rozpoczęciem grillowania należy otworzyć zawór na butli
               gazowej, potem przyciskając kurek z lewej zakręcić go o 90st w
               lewo i przycisnąć przycisk zapłonu
@@ -674,6 +679,64 @@
             <li>inne grille - dzwonić do mnie to wytłumaczę</li>
           </ol>
         </div>
+      </div>
+
+      <div class="separator"></div>
+
+      <div class="section">
+        <h2>Łazienki</h2>
+        <ol>
+          <li>
+            Łazienki są 4: przy pokoju rodziców, przy pokojach na górze, przy
+            pokoju dla gości na dole, na porché.
+          </li>
+          <li>Odpływy lubią czasami się zatkać (atasco).</li>
+          <li>
+            Płyn do udrożniania rur (desatasco - marka: WC NET) powinien się
+            znajdować w Gospodarczym, jeśli nie to można kupić w dowolnym
+            sklepie.
+          </li>
+          <li>
+            W łazience dorosłych oraz pokoju gości odpływy są zakrywane zieloną
+            gumą - ponieważ lubi z nich delikatnie śmierdzieć.
+          </li>
+        </ol>
+      </div>
+
+      <div class="separator"></div>
+
+      <div class="section">
+        <h2>Śmieci</h2>
+        <ol>
+          <li>
+            Śmieci segregujemy. Są 4 śmietniczki pod zlewem w kuchni: najniższy
+            - papier, czarny - bio, największy - plastiki i opakowania, czwarty
+            - mieszanka tzw. resta.
+          </li>
+          <li>
+            Bio wynosimy do kompostownika na posesji. Za bambusami przy tarasie
+            kuchennym.
+          </li>
+          <li>
+            Wynosimy idąc od furtki w lewo, potem w prawo, przy wjeździe do
+            Messiego.
+          </li>
+          <li>
+            Segregujemy na 5: plastiki i opakowania (envasos), papier, bio,
+            reszta (resta), szkło (nie mamy pojemnika na szkło - po prostu
+            odkładamy do spiżarni do wyniesienia):
+            <ul>
+              <li>opakowania - plastiki, kartony po mleku, puszki, pokrywki</li>
+              <li>papier - standardowo</li>
+              <li>bio (bez kości i ości)</li>
+              <li>reszta - wszystko co nie pasuje do pozostałych 4ech</li>
+              <li>
+                zazwyczaj buforujemy śmieci w workach w spiżarni, i raz na
+                tydzień wynosimy.
+              </li>
+            </ul>
+          </li>
+        </ol>
       </div>
     </div>
 
