--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul>
             <li><button class="button">strona główna</button></li>
             <li><a class="button" href="./manual.html">manual</a></li>
-            <li><button class="button">atrakcje</button></li>
+            <li><a class="button" href="./atracions.html" >atrakcje</a></li>
           </ul>
         </div>
       </div>
