--- a/atracions.html
+++ b/atracions.html
@@ -15,13 +15,13 @@
   <body>
     <div id="header" class="dark-bcg">
       <div class="section">
-        <div id="logo">PgCreu19bis</div>
+        <a href="./index.html"><div id="logo">PgCreu19bis</div></a>
         <div>
           <!-- strona główna- manual- atrakcje -->
           <ul>
             <li><a class="button" href="./index.html">strona główna</a></li>
             <li><a class="button" href="./manual.html">manual</a></li>
-            <li><a class="button" href="./atracions.html">atrakcje</a></li>
+            <li><a class="button active" href="./atracions.html">atrakcje</a></li>
           </ul>
         </div>
       </div>
@@ -104,7 +104,7 @@
               zasłoną w szafie. Na koniec włóżcie tam z powrotem. Najlepiej
               rozbić się koło Chiringuito Iguana albo Ancla.
             </li>
-           
+
             <li>
               Rolki - zostawimy 5 kompletów rolek, deskorolkę i hulajnogę
               elektryczną - można pojeździć po deptaku. Sprzęt jest w garażu za
@@ -164,8 +164,7 @@
     </div>
 
     <div id="footer">
-        <div class="section">copyrights Hubert web development 2023</div>
-      </div>
-      
+      <div class="section">copyrights Hubert web development 2023</div>
+    </div>
   </body>
 </html>
