--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Passeig de la creu 19BIS</title>
+    <title>Passeig de la creu 19 bis</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="popup.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
