--- a/atracions.html
+++ b/atracions.html
@@ -21,7 +21,9 @@
           <ul>
             <li><a class="button" href="./index.html">strona główna</a></li>
             <li><a class="button" href="./manual.html">manual</a></li>
-            <li><a class="button active" href="./atracions.html">atrakcje</a></li>
+            <li>
+              <a class="button active" href="./atracions.html">atrakcje</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -162,6 +164,9 @@
         </ol>
       </div>
     </div>
+
+    <br />
+    <br />
 
     <div id="footer">
       <div class="section">copyrights Hubert web development 2023</div>
