--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
     <div id="popup" class="popup">
       <span class="close" onclick="closePopup()">&times;</span>
-      <h3>Popup Title</h3>
-      <p>Popup content goes here.</p>
+      <h3>Rezerwacja</h3>
+      <p>Ta strona nie jest ofertą. Została stworzona przez Huberta jako pierwszy projekt HTML+CSS.</p>
     </div>
     <div id="overlay" class="overlay">
       
